# aiomost

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
FastAPI/mattermost/: api.py
aiomost/: __init__.py  application.py  fastapi_integration.py
aiomost/mattermost_actions/: __init__.py  mm_actions.py
aiomost/mattermost_dispatcher/: __init__.py
aiomost/mattermost_keyboards/: __init__.py  mm_keyboards.py
aiomost/mattermost_routers/: __init__.py  mm_routers.py
aiomost/mattermost_state_storage/: __init__.py  redis_state_manager.py
aiomost/mattermost_websockets/: __init__.py  mm_websockets.py
docs/: index.en.md  index.md  index.ru.md  requirements.txt
docs/getting-started/: configuration.en.md  configuration.ru.md  installation.en.md  installation.md
docs/guides/: handling-events.en.md  handling-events.ru.md  interactive-buttons.en.md  interactive-buttons.ru.md  sending-messages.en.md  sending-messages.md
examples/: __init__.py  fastapi_mattermost_bot.py  states.py
tests/: test_public_api.py
